--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                 <h4>Subheading</h4>
                 <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
             </div>
-            <div>
-                <canvas id="myChart" width="400" height="400"></canvas>
+            <div class="centered">
+                <canvas id="myChart" width="400" height="500"></canvas>
             </div>
         </div>
 
