demosite first commit 10

--- a/index.html
+++ b/index.html
@@ -87,30 +87,23 @@
 
 <script>
     var ctx = document.getElementById("myChart").getContext('2d');
-    var myChart = new Chart(ctx, {
-        type: 'polarArea',
-        data = {
-            datasets: [{
-                data: [10, 20, 30]
-            }],
+    var myDoughnutChart = new Chart(ctx, {
+        type: 'doughnut',
+        data: data,
+        options: options
+    })
+    data = {
+        datasets: [{
+            data: [10, 20, 30]
+        }],
 
-            // These labels appear in the legend and in the tooltips when hovering different arcs
-            labels: [
-                'Red',
-                'Yellow',
-                'Blue'
-            ]
-        },
-        options: {
-            scales: {
-                yAxes: [{
-                    ticks: {
-                        beginAtZero: true
-                    }
-                }]
-            }
-        }
-    });
+        // These labels appear in the legend and in the tooltips when hovering different arcs
+        labels: [
+            'Red',
+            'Yellow',
+            'Blue'
+        ]
+    }
 </script>
 
 </html>
