--- a/index.html
+++ b/index.html
@@ -88,23 +88,22 @@
 <script>
     var ctx = document.getElementById('myChart').getContext('2d');
     var chart = new Chart(ctx, {
-        // The type of chart we want to create
-        type: 'line',
+                // The type of chart we want to create
+                type: 'pie',
 
-        // The data for our dataset
-        data: {
-            labels: ["January", "February", "March", "April", "May", "June", "July"],
-            datasets: [{
-                label: "My First dataset",
-                backgroundColor: 'rgb(255, 99, 132)',
-                borderColor: 'rgb(255, 99, 132)',
-                data: [0, 10, 5, 2, 20, 30, 45],
-            }]
-        },
+                // The data for our dataset
+                data = {
+                    datasets: [{
+                        data: [10, 20, 30]
+                    }],
 
-        // Configuration options go here
-        options: {}
-    });
+                    // These labels appear in the legend and in the tooltips when hovering different arcs
+                    labels: [
+                        'Red',
+                        'Yellow',
+                        'Blue'
+                    ]
+                }
 </script>
 
 </html>
