--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 type: 'pie',
 
                 // The data for our dataset
-                data = {
+                data: {
                     datasets: [{
                         data: [10, 20, 30]
                     }],
