--- a/index.html
+++ b/index.html
@@ -87,23 +87,17 @@
 
 <script>
     var ctx = document.getElementById('myChart').getContext('2d');
-    var chart = new Chart(ctx, {
-                // The type of chart we want to create
-                type: 'pie',
-
-                // The data for our dataset
-                data: {
-                    datasets: [{
-                        data: [10, 20, 30]
-                    }],
-
-                    // These labels appear in the legend and in the tooltips when hovering different arcs
-                    labels: [
-                        'Red',
-                        'Yellow',
-                        'Blue'
-                    ]
-                }
+    var chart = new Chart(document.getElementById("myChart"), {
+        "type": "doughnut",
+        "data": {
+            "labels": ["Red", "Blue", "Yellow"],
+            "datasets": [{
+                "label": "My First Dataset",
+                "data": [300, 50, 100],
+                "backgroundColor": ["rgb(255, 99, 132)", "rgb(54, 162, 235)", "rgb(255, 205, 86)"]
+            }]
+        }
+    });
 </script>
 
 </html>
