--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <h4>Subheading</h4>
                 <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
             </div>
-            <div class="text-center">
+            <div class="col align-self-center">
                 <canvas id="myChart" width="400" height="400"></canvas>
             </div>
         </div>
