--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Test DemoApp 2</title>
+    <title>Test DemoApp</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet">
@@ -40,7 +40,7 @@
 
         <div class="jumbotron">
             <h1 class="display-3">"Demo Website"</h1>
-            <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            <p class="lead">This is a Demo Website to show how a automatic deployment works. With this demo you can see that a new version of this site is deployed once code is commited to Github.</p>
             <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
         </div>
 
