--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Test DemoApp 1</title>
+    <title>Test DemoApp</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet">
@@ -35,7 +35,7 @@
                     </li>
                 </ul>
             </nav>
-            <h3 class="text-muted">DEMO WEBSITE</h3>
+            <h3 class="text-muted">DEMO WEBSITE v1.0</h3>
         </div>
 
         <div class="jumbotron">
