--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                     </li>
                 </ul>
             </nav>
-            <h3 class="text-muted">DEMO WEBSITE v1.0</h3>
+            <h3 class="text-muted">DEMO WEBSITE</h3>
         </div>
 
         <div class="jumbotron">
-            <h1 class="display-3">"Demo Website"</h1>
+            <h1 class="display-3">"Demo Website v1.0"</h1>
             <p class="lead">This is a Demo Website to show how a automatic deployment works. With this demo you can see that a new version of this site is deployed once code is commited to Github.</p>
             <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
         </div>
