--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
 
         <footer class="footer">
-            <p>&copy; Company 2017</p>
+            <p>&copy; TestCompany 2018</p>
         </footer>
 
     </div>
